scalr-ctl Changelog
===============


Changelog on Scalr Wiki: https://scalr-labs.atlassian.net/wiki/pages/viewpage.action?pageId=109805613


Version 2.0.21
--------------

Improvements

    ST-247 SNI problem with Python version prior to 2.7.9

Fixed

    ST-242 Update commands show incorrect error messages


Version 2.0.20
--------------

Improvements

    ST-241 Add polling option for 'servers terminate' action
    ST-244 Implement list action for EventLogEntry and LogEntry
    ST-246 Show response codes when executing commands with --debug option

Fixed

    ST-206 Polling script status fails when 'scripts execute' action executed with --envId option


Version 2.0.19
--------------

Improvements

    ST-237 Simplify configuration process
    ST-223 Add option to wait for server to suspend or resume

Fixed

    ST-238 Delete actions return inconsistent messages
    ST-220 Delete actions with multiple arguments show incorrect results


Version 2.0.18
--------------

New feature

    ST-210 Farm Template compatibility
    ST-233 Allow to define custom scaling metrics on Account scope
    ST-235 scalr-ctl shows only first error form list

Fixed

    ST-234 Menu fails when spec files are outdated
    ST-238 Delete actions return inconsistent messages


Version 2.0.17
--------------

New feature

    ST-232 Add support for Role orchestration update method in Global scope
    ST-231 Add support of Orchestration rules on user scope


Version 2.0.16
--------------

Improvements

    ST-229 Support default value for properties

Fixed

    ST-234 Menu fails when spec files are outdated


Version 2.0.15
--------------

Fixed

    ST-226 "servers list" command lost instanceType column in table view


Version 2.0.14
--------------

Improvements

    ST-222 Update instance type for servers
    ST-216 Add support for new-style account level API methods
    ST-224 Backward compatibility for account level API methods

Fixed
