@@ -61,7 +61,7 @@ class Action(BaseAction):
 
     dry_run = False
     post_template = None
-    _table_columns = None
+    _table_columns = []
 
     _discriminators = {}
 
@@ -73,7 +73,6 @@ class Action(BaseAction):
         self.route = route
         self.http_method = http_method
         self.api_level = api_level
-        self._table_columns = []
 
         self._init()
 
@@ -379,7 +378,7 @@ class Action(BaseAction):
                             if "type" in f_key["properties"]["id"]:
                                 if f_key["properties"]["id"]["type"] in ("integer", "string"):
                                     column_names.append("%s.id" % k)
-
+        print column_names
         return column_names
 
     def _lookup(self, response_ref):
